fix(SonarCloud) Fixed a lot of sonar cloud maintainability issues.